--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "sendmail.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+, "start": "node sendmail.js"  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maulikrshah/lpsppwv2.git"
