--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "sendgrid",
   "main": "sendmail.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-, "start": "node sendmail.js"  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node sendmail.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maulikrshah/lpsppwv2.git"
@@ -18,7 +19,10 @@
   "homepage": "https://github.com/maulikrshah/lpsppwv2#readme",
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "multer": "^1.3.0",
     "npm": "^5.8.0"
   },
   "devDependencies": {}
